# justfunctions

./: .gitignore  LICENCE  README.md  functions_documentation.md  generate_documentation.py  pyproject.toml  pyproject_poetry.toml
doingscience/: date_functions.py  general_functions.py  nlp_functions.py
justfunctions/: date_functions.py  general_functions.py  nlp_functions.py
src/doingscience/: general_functions.py
tests/: test_general_functions.py
